--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,11 @@
   margin: 20px;
 }
 
+.details-container {
+  border: 1px solid goldenrod;
+  margin: 10px;
+}
+
 .asset-container {
   border: 1px solid green;
   margin: 10px;
